--- a/style.css
+++ b/style.css
@@ -421,8 +421,53 @@ body{
     background-color: #48ab86;
     transform: scale(1.1);
 }
-.footer{
+.footer1{
     height: 50vh;
     width: 100%;
     background-color: #080710;
+}
+.footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    color: white;
+   
+}
+.footer>.left{
+    height: 200px;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 1px solid white; */
+    border-radius: 10px;
+    margin-top: 50px;
+    padding: 20px 30px;
+    gap: 20px;
+    box-shadow: 5px 5px 5px rgb(49, 48, 48),-5px -5px 5px rgb(49, 48, 48);
+}
+.footer>.left>h1{
+    font-size: 35px;
+    font-weight: 600;
+    /* color: rgb(5, 7, 8); */
+    font-weight: bold;
+    text-align: center;
+}
+.footer>.left>p{
+    font-size: 20px;
+    font-weight: bold;
+}
+.footer>.right{
+    width: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /* border: 1px solid white; */
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgb(49, 48, 48),-5px -5px 5px rgb(49, 48, 48);
 }
